--- a/opentoolcontroller/views/DeviceIconEditor.ui
+++ b/opentoolcontroller/views/DeviceIconEditor.ui
@@ -234,7 +234,7 @@
        </property>
       </widget>
      </item>
-     <item row="9" column="0">
+     <item row="10" column="0">
       <widget class="QLabel" name="label_8">
        <property name="minimumSize">
         <size>
@@ -250,7 +250,7 @@
        </property>
       </widget>
      </item>
-     <item row="9" column="1">
+     <item row="10" column="1">
       <widget class="QDoubleSpinBox" name="ui_text_x">
        <property name="minimum">
         <double>-250.000000000000000</double>
@@ -260,7 +260,7 @@
        </property>
       </widget>
      </item>
-     <item row="10" column="0">
+     <item row="11" column="0">
       <widget class="QLabel" name="label_9">
        <property name="minimumSize">
         <size>
@@ -276,7 +276,7 @@
        </property>
       </widget>
      </item>
-     <item row="10" column="1">
+     <item row="11" column="1">
       <widget class="QDoubleSpinBox" name="ui_text_y">
        <property name="minimum">
         <double>-250.000000000000000</double>
@@ -286,7 +286,7 @@
        </property>
       </widget>
      </item>
-     <item row="11" column="0">
+     <item row="12" column="0">
       <widget class="QLabel" name="label_10">
        <property name="minimumSize">
         <size>
@@ -302,7 +302,7 @@
        </property>
       </widget>
      </item>
-     <item row="11" column="1">
+     <item row="12" column="1">
       <widget class="QSpinBox" name="ui_font_size">
        <property name="minimum">
         <number>6</number>
@@ -310,9 +310,12 @@
        <property name="maximum">
         <number>72</number>
        </property>
+       <property name="value">
+        <number>16</number>
+       </property>
       </widget>
      </item>
-     <item row="8" column="0">
+     <item row="9" column="0">
       <widget class="QLabel" name="label_2">
        <property name="minimumSize">
         <size>
@@ -328,8 +331,12 @@
        </property>
       </widget>
      </item>
-     <item row="8" column="1">
-      <widget class="QLineEdit" name="ui_text"/>
+     <item row="9" column="1">
+      <widget class="QLineEdit" name="ui_text">
+       <property name="enabled">
+        <bool>false</bool>
+       </property>
+      </widget>
      </item>
      <item row="6" column="0">
       <widget class="QLabel" name="label_3">
@@ -350,7 +357,7 @@
      <item row="6" column="1">
       <widget class="QComboBox" name="ui_default_layer"/>
      </item>
-     <item row="12" column="0">
+     <item row="13" column="0">
       <widget class="QLabel" name="label_12">
        <property name="minimumSize">
         <size>
@@ -366,7 +373,7 @@
        </property>
       </widget>
      </item>
-     <item row="12" column="1">
+     <item row="13" column="1">
       <layout class="QHBoxLayout" name="horizontalLayout_2">
        <item>
         <widget class="QWidget" name="ui_color_box" native="true">
@@ -405,6 +412,16 @@
         </spacer>
        </item>
       </layout>
+     </item>
+     <item row="8" column="0">
+      <widget class="QLabel" name="label_13">
+       <property name="text">
+        <string>Default Text</string>
+       </property>
+      </widget>
+     </item>
+     <item row="8" column="1">
+      <widget class="QLineEdit" name="ui_default_text"/>
      </item>
     </layout>
    </item>
